# automation

./: README.md  pyproject.toml
assets/: emails.txt  existing-contacts.txt  phone_numbers.txt
automation/: automation.py
