[tool.poetry]
name = "automation"
version = "0.1.0"
description = ""
authors = ["will-ing <will-ing@github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pylint = "^2.5.3"
faker = "^4.1.1"
autopep8 = "^1.5.3"
pytest-watch = "^4.2.0"
pytest = "^6.0.1"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
